# researchPapers

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
clickhouse/init/: 01_schema.sql
migrations/: 001_init.sql  002_openalex_and_text.sql  003_cited_works.sql  004_graph_scores.sql  005_communities.sql  006_semantic_clusters.sql  007_tags.sql  008_backfill_marker.sql  009_alt_tag_columns.sql  010_more_tag_columns.sql  011_v2_tag_columns.sql  012_storage_cuts.sql
scripts/: migrate_pg_to_ch.py  recover_pg_tags_to_ch.py
src/researchpapers/: analytics.py  api.py  arxiv.py  biorxiv_ingest.py  ch_db.py  ch_exports.py  charts.py  citation_history.py  cli.py  clusters.py  config.py  db.py  embed.py  exporter.py  graph.py  highsignal_report.py  http.py  ingest.py  keybert_tag.py  llm_tag.py  mlx_tag_v2.py  mlx_tag_v3.py  noun_tag.py  noun_tag_v2.py  openalex.py  openreview_ingest.py  pdfs.py  semantic_scholar.py  tag_eval.py  url_extract.py  watcher.py
web/src/components/tables/: papers-table.tsx
