[project]
name = "researchpapers"
version = "0.1.0"
description = "arXiv ingestion + cited-URLs leaderboard (paper->paper graph via Semantic Scholar deferred to v2)"
authors = [
    { name = "Sarthak Agrawal", email = "sarthakagrawal927@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "clickhouse-connect>=1.1.1",
    "fastapi>=0.118.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "keybert>=0.9.0",
    "matplotlib>=3.10.9",
    "mlx-lm>=0.31.3",
    "networkx>=3.6.1",
    "openreview-py>=2.2.1",
    "pdfminer-six>=20260107",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "scispacy>=0.6.2",
    "spacy>=3.8.14",
    "tenacity>=9.1.4",
    "tldextract>=5.3.1",
    "typer>=0.26.2",
    "uvicorn>=0.34.3",
]

[project.scripts]
papers = "researchpapers.cli:app"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
